[gd_scene load_steps=7 format=2]

[ext_resource path="res://CameraManager.gd" type="Script" id=1]
[ext_resource path="res://Pause Menu.gd" type="Script" id=2]
[ext_resource path="res://resources/Themes/Base UI.tres" type="Theme" id=3]
[ext_resource path="res://resources/04B_30__.TTF" type="DynamicFontData" id=4]

[sub_resource type="Environment" id=1]
background_energy = 0.0

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[node name="Camera Manager" type="Spatial"]
pause_mode = 2
script = ExtResource( 1 )
max_zoom = 100.0

[node name="Camera" type="ClippedCamera" parent="."]
pause_mode = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )
environment = SubResource( 1 )
current = true
far = 8192.0
margin = 5.0
collision_mask = 32768

[node name="Tween" type="Tween" parent="Camera"]
pause_mode = 2

[node name="HUD" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )

[node name="Size Label" type="Label" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = -38.0
margin_right = 76.0
margin_bottom = -24.0
text = "Size: 20"

[node name="InventoryDisplay" type="HBoxContainer" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -800.0
margin_top = -80.0
alignment = 2

[node name="Sample Item" type="ViewportContainer" parent="HUD/InventoryDisplay"]
visible = false
margin_left = 720.0
margin_right = 800.0
margin_bottom = 80.0

[node name="Viewport" type="Viewport" parent="HUD/InventoryDisplay/Sample Item"]
size = Vector2( 80, 80 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 0

[node name="Camera" type="Camera" parent="HUD/InventoryDisplay/Sample Item/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.8 )
cull_mask = 1048064

[node name="ActionBar" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -273.0
margin_top = -186.16
margin_right = 273.0
margin_bottom = -119.151
align = 1
valign = 1

[node name="Tips" type="Label" parent="HUD"]
margin_left = 1307.0
margin_top = 794.0
margin_right = 1908.0
margin_bottom = 923.0
custom_fonts/font = SubResource( 2 )
autowrap = true

[node name="Level End Display" type="Control" parent="HUD"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="HUD/Level End Display"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Level End Display"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label Container" type="HBoxContainer" parent="HUD/Level End Display/VBoxContainer"]
margin_top = 421.0
margin_right = 1920.0
margin_bottom = 449.0
alignment = 1

[node name="Label" type="Label" parent="HUD/Level End Display/VBoxContainer/Label Container"]
margin_left = 796.0
margin_right = 1123.0
margin_bottom = 28.0
text = "Level Complete!"

[node name="Replay Level Container" type="HBoxContainer" parent="HUD/Level End Display/VBoxContainer"]
margin_top = 469.0
margin_right = 1920.0
margin_bottom = 519.0
alignment = 1

[node name="Replay Level Button" type="Button" parent="HUD/Level End Display/VBoxContainer/Replay Level Container"]
margin_left = 810.0
margin_right = 1110.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
text = "Replay Level"

[node name="Next Level Container" type="HBoxContainer" parent="HUD/Level End Display/VBoxContainer"]
margin_top = 539.0
margin_right = 1920.0
margin_bottom = 589.0
alignment = 1

[node name="Next Level Button" type="Button" parent="HUD/Level End Display/VBoxContainer/Next Level Container"]
margin_left = 810.0
margin_right = 1110.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
text = "Next Level"

[node name="Level Select Container" type="HBoxContainer" parent="HUD/Level End Display/VBoxContainer"]
margin_top = 609.0
margin_right = 1920.0
margin_bottom = 659.0
alignment = 1

[node name="Level Select Button" type="Button" parent="HUD/Level End Display/VBoxContainer/Level Select Container"]
margin_left = 810.0
margin_right = 1110.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
text = "Level Select"

[node name="Pause Menu" type="Control" parent="HUD"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="HUD/Pause Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.607843 )

[node name="HBoxContainer" type="VBoxContainer" parent="HUD/Pause Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Pause Label" type="Label" parent="HUD/Pause Menu/HBoxContainer"]
margin_top = 456.0
margin_right = 1920.0
margin_bottom = 484.0
text = "Game Paused"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Pause Menu/HBoxContainer"]
margin_top = 504.0
margin_right = 1920.0
margin_bottom = 554.0
alignment = 1

[node name="Resume Button" type="Button" parent="HUD/Pause Menu/HBoxContainer/HBoxContainer"]
margin_left = 600.0
margin_right = 950.0
margin_bottom = 50.0
rect_min_size = Vector2( 350, 50 )
text = "Resume"

[node name="Restart Level Button" type="Button" parent="HUD/Pause Menu/HBoxContainer/HBoxContainer"]
margin_left = 970.0
margin_right = 1320.0
margin_bottom = 50.0
rect_min_size = Vector2( 350, 50 )
text = "Restart"

[node name="HBoxContainer3" type="HBoxContainer" parent="HUD/Pause Menu/HBoxContainer"]
margin_top = 574.0
margin_right = 1920.0
margin_bottom = 624.0
alignment = 1

[node name="Level Select Button" type="Button" parent="HUD/Pause Menu/HBoxContainer/HBoxContainer3"]
margin_left = 600.0
margin_right = 950.0
margin_bottom = 50.0
rect_min_size = Vector2( 350, 50 )
text = "Level Select"

[node name="Quit Button" type="Button" parent="HUD/Pause Menu/HBoxContainer/HBoxContainer3"]
margin_left = 970.0
margin_right = 1320.0
margin_bottom = 50.0
rect_min_size = Vector2( 350, 50 )
text = "Quit to Desktop"

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/Pause Menu/HBoxContainer"]
visible = false
margin_top = 609.0
margin_right = 1920.0
margin_bottom = 659.0
alignment = 1

[node name="Main Menu Button" type="Button" parent="HUD/Pause Menu/HBoxContainer/HBoxContainer2"]
margin_left = 785.0
margin_right = 1135.0
margin_bottom = 50.0
rect_min_size = Vector2( 350, 50 )
text = "Main Menu"

[node name="Game Start Cover" type="ColorRect" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[connection signal="tween_completed" from="Camera/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="HUD/Level End Display/VBoxContainer/Replay Level Container/Replay Level Button" to="." method="_on_Replay_Level_Button_pressed"]
[connection signal="pressed" from="HUD/Level End Display/VBoxContainer/Next Level Container/Next Level Button" to="." method="_on_Next_Level_Button_pressed"]
[connection signal="pressed" from="HUD/Level End Display/VBoxContainer/Level Select Container/Level Select Button" to="." method="_on_Level_Select_Button_pressed"]
[connection signal="pressed" from="HUD/Pause Menu/HBoxContainer/HBoxContainer/Resume Button" to="." method="_on_Resume_Button_pressed"]
[connection signal="pressed" from="HUD/Pause Menu/HBoxContainer/HBoxContainer/Restart Level Button" to="." method="_on_Restart_Level_Button_pressed"]
[connection signal="pressed" from="HUD/Pause Menu/HBoxContainer/HBoxContainer3/Level Select Button" to="." method="_on_Level_Select_Button_pressed"]
[connection signal="pressed" from="HUD/Pause Menu/HBoxContainer/HBoxContainer3/Quit Button" to="HUD/Pause Menu" method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="HUD/Pause Menu/HBoxContainer/HBoxContainer2/Main Menu Button" to="HUD/Pause Menu" method="_on_Main_Menu_Button_pressed"]
